@@ -6,6 +6,7 @@ copyright_year   = 2015
 version          = 0.21
 
 [@Author::Plicease]
+:version = 2.34
 release_tests = 1
 travis_status = 1
 perl          = 5.008001
@@ -31,3 +32,4 @@ remove = Carp
 cpan = 1
 
 [Alt]
+[Deprecated]
